[gd_scene load_steps=5 format=3 uid="uid://bjyrg3k73ccb"]

[ext_resource type="Theme" uid="uid://b78agos57udst" path="res://ui/ui_theme.tres" id="1_3mm8k"]
[ext_resource type="Script" path="res://ui/loadout_ui.gd" id="1_mlh0e"]
[ext_resource type="AudioStream" uid="uid://botiijpxkyqam" path="res://assets/audio/sfx/error1.wav" id="2_kvabq"]
[ext_resource type="AudioStream" uid="uid://clujv1rpg4wh0" path="res://assets/audio/sfx/upgrade_succes_short.wav" id="3_3w80i"]

[node name="loadout_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3mm8k")
script = ExtResource("1_mlh0e")

[node name="MemoryRemaining" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 211.0
offset_top = 65.0
offset_right = 337.0
offset_bottom = 133.0
text = "10 MB"

[node name="UpgradeContainer" type="FlowContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = -84.0
offset_right = 520.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="HPUpgrade" type="Button" parent="UpgradeContainer"]
layout_mode = 2
text = "ADD HP (-2 MB)"

[node name="SpeedUpgrade" type="Button" parent="UpgradeContainer"]
layout_mode = 2
text = "ADD SPEED (-4 MB)"

[node name="HPUpgradeToggle" type="CheckButton" parent="UpgradeContainer"]
layout_mode = 2
text = "HP UPGRADE | 2MB"

[node name="FiringSpeedUpgradeToggle" type="CheckButton" parent="UpgradeContainer"]
layout_mode = 2
text = "FIRING SPEED | 2MB"

[node name="DamageUpgradeToggle" type="CheckButton" parent="UpgradeContainer"]
layout_mode = 2
text = "DAMAGE | 2MB"

[node name="HUDUpgradeToggle" type="CheckButton" parent="UpgradeContainer"]
layout_mode = 2
button_pressed = true
text = "HUD | 2MB"

[node name="SpeedUpgradeToggle" type="CheckButton" parent="UpgradeContainer"]
layout_mode = 2
text = "SPEED | 2MB"

[node name="StatsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 25.0
offset_right = -30.0
offset_bottom = 265.0
grow_horizontal = 0

[node name="RichTextLabel" type="RichTextLabel" parent="StatsContainer"]
layout_mode = 2
text = "STATS"
fit_content = true

[node name="CurrentHP" type="RichTextLabel" parent="StatsContainer"]
layout_mode = 2
text = "HP"
fit_content = true

[node name="CurrentSpeed" type="RichTextLabel" parent="StatsContainer"]
layout_mode = 2
text = "SPEED"
fit_content = true

[node name="Audio" type="Node" parent="."]

[node name="ErrorSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("2_kvabq")
volume_db = -7.214

[node name="UpgradeSuccessSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_3w80i")
volume_db = -2.404

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -274.0
offset_top = -178.0
offset_right = 291.0
offset_bottom = -138.0
grow_horizontal = 2
grow_vertical = 0

[node name="DeployButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "DEPLOY"

[connection signal="pressed" from="UpgradeContainer/HPUpgrade" to="." method="_on_hp_upgrade_pressed"]
[connection signal="pressed" from="UpgradeContainer/SpeedUpgrade" to="." method="_on_speed_upgrade_pressed"]
[connection signal="toggled" from="UpgradeContainer/HPUpgradeToggle" to="." method="_on_hp_upgrade_toggle_toggled"]
[connection signal="toggled" from="UpgradeContainer/FiringSpeedUpgradeToggle" to="." method="_on_firing_speed_upgrade_toggle_toggled"]
[connection signal="toggled" from="UpgradeContainer/DamageUpgradeToggle" to="." method="_on_damage_upgrade_toggle_toggled"]
[connection signal="toggled" from="UpgradeContainer/HUDUpgradeToggle" to="." method="_on_hud_upgrade_toggle_toggled"]
[connection signal="toggled" from="UpgradeContainer/SpeedUpgradeToggle" to="." method="_on_speed_upgrade_toggle_toggled"]
[connection signal="pressed" from="VBoxContainer/DeployButton" to="." method="_on_deploy_button_pressed"]
